# tmpl.vscode-rust.0

./: .gitattributes  .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.devcontainer.docker/: .dockerignore  Dockerfile.archlinux.default
.devcontainer/.d/: devcontainer.default.json  ensure-files-rust.default.sh  ensure-files.default.sh  environment.default.sh  initialize.default.sh  on-create.default.sh  post-attach.default.sh  post-create.default.sh  post-start.default.sh  update-content.default.sh
.editorconfig.d/: .editorconfig.default
.github/workflows/: build_docker_rust_dev.yml
tmpl-crate/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.tpl
tmpl-crate/benches/: benchmark_a.rs
tmpl-crate/examples/: basic.rs
tmpl-crate/src/: lib.rs  mod_a.rs
tmpl-crate/src/mod_a/: mod_b.rs
tmpl-crate/tests/: integration_test.rs
tmpl-crate/tests/common/: mod.rs
